--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/sunrise-lookup/sunrise-lookup.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/sunrise-lookup/sunrise-lookup.component.html
@@ -39,7 +39,7 @@
               [permissionAttribute]="permAttribute"
               [permissionTitle]="gameTitle"
             >
-              <span [matTooltip]="featureMatToolip" [matTooltipDisabled]="canFeatureUgc">{{
+              <span [matTooltip]="featureMatTooltip">{{
                 ugcItem?.featuredByT10 ? 'Edit Featured Status' : 'Set Featured Status'
               }}</span>
             </button>
