--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
@@ -38,7 +38,7 @@
               [permissionAttribute]="permAttribute"
               [permissionTitle]="gameTitle"
             >
-              <span [matTooltip]="featureMatToolip">{{
+              <span [matTooltip]="featureMatTooltip">{{
                 ugcItem?.featuredByT10 ? 'Edit Featured Status' : 'Set Featured Status'
               }}</span>
             </button>
