move permission module to global app.module; more PR comments

--- a/StewardClient/src/app/pages/tools/pages/permission-management/components/verify-user-permissions-change-dialog/verify-user-permissions-change-dialog.component.html
+++ b/StewardClient/src/app/pages/tools/pages/permission-management/components/verify-user-permissions-change-dialog/verify-user-permissions-change-dialog.component.html
@@ -2,7 +2,7 @@
 <p class="subtitle">{{ user.name }} | {{ user.emailAddress }}</p>
 <div mat-dialog-content>
   <div class="sf-wrapper">
-    <div class="sf-horizontal align-top">
+    <div class="sf-horizontal do-not-align-items align-top">
       <div>
         <h2 class="added-color">Permissions Added</h2>
         <div class="change-entry" *ngFor="let perm of addedPermissions">
