--- a/StewardClient/src/app/pages/tools/pages/permission-management/components/verify-user-permissions-change-dialog/verify-user-permissions-change-dialog.component.scss
+++ b/StewardClient/src/app/pages/tools/pages/permission-management/components/verify-user-permissions-change-dialog/verify-user-permissions-change-dialog.component.scss
@@ -21,14 +21,8 @@ h2 {
 .sf-wrapper {
   min-height: $dialog-min-height;
 
-  .sf-horizontal {
-    &.align-top {
-      align-items: unset;
-    }
-
-    > div {
-      padding: 0 $gap-small;
-    }
+  .sf-horizontal > div {
+    padding: 0 $gap-small;
   }
 }
 
