--- a/StewardClient/src/app/pages/tools/pages/permission-management/permission-management.component.html
+++ b/StewardClient/src/app/pages/tools/pages/permission-management/permission-management.component.html
@@ -52,7 +52,7 @@
           mat-raised-button
           color="basic"
           [disabled]="!selectedUserHasPermChanges"
-          (click)="setTreesSelectedAttributes(this.selectedUser.attributes)"
+          (click)="undoChanges()"
         >
           Undo Changes
         </button>
