--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
@@ -152,7 +152,7 @@
                 monitorCompleteSnackbar
                 [disabled]="!canCloneUgc"
               >
-                <help-popover-icon cardTitle="Persist UGC">
+                <help-popover-icon cardTitle="Clone UGC">
                   <p>Cloned UGC is duplicated on the System user (ID 1 for FH5) in Studio.</p>
                   <p>
                     There are two other options available: KeepGuid and IsSearchable. These are not
