Properly disable Hide Private UGC and add warning

--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
@@ -102,6 +102,9 @@
                 monitorCompleteSnackbar
                 [disabled]="!canHideUgc"
               >
+                <help-popover-icon *ngIf="!ugcItem?.isPublic" cardTitle="Hide UGC">
+                  <p class="sf-text-warn">This item is private and cannot be hidden.</p>
+                </help-popover-icon>
                 Hide UGC
               </button>
               <mat-checkbox
@@ -109,6 +112,7 @@
                 stateManager
                 [permissionAttribute]="hidePermAttribute"
                 [permissionTitle]="gameTitle"
+                [disabled]="!canHideUgc"
                 matTooltip="Verify Deletion"
                 >Verify</mat-checkbox
               >
