--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/sunrise-redirect/sunrise-redirect.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/sunrise-redirect/sunrise-redirect.component.html
@@ -1,9 +1,12 @@
-<p *ngIf="!parent?.navigationFailedId; else navigationFailedTemplate">
+<p *ngIf="!sharedLookupService?.locations?.shareCodeOrId; else navigationFailedTemplate">
   Lookup should redirect shortly. If it doesn't, select option above.
 </p>
 
 <!-- TODO: Add found types in case redirect fails (happens when there are multiple types) -->
 
 <ng-template #navigationFailedTemplate class="sf-text-warn">
-  Lookup failed, {{ parent.navigationFailedId }} is not a valid UGC ID / Sharecode.
+  <p>
+    Lookup failed, <code>{{ sharedLookupService?.locations?.shareCodeOrId }}</code> is not a valid
+    UGC ID / Sharecode.
+  </p>
 </ng-template>
