hide multiple ugc button in ugc search pages

--- a/StewardClient/src/app/pages/tools/pages/user-details/woodstock/woodstock-user-details.component.html
+++ b/StewardClient/src/app/pages/tools/pages/user-details/woodstock/woodstock-user-details.component.html
@@ -120,7 +120,7 @@
             <woodstock-player-ugc
               #ugcLayerGroup
               [identity]="identity"
-              [contentType]="UgcType.EventBlueprint"
+              [contentType]="UgcType.LayerGroup"
               [usingIdentities]="true"
             ></woodstock-player-ugc>
           </mat-tab>
