--- a/StewardClient/src/app/shared/views/ugc-table/ugc-table.component.scss
+++ b/StewardClient/src/app/shared/views/ugc-table/ugc-table.component.scss
@@ -106,3 +106,7 @@ mat-progress-spinner {
 img {
   @include standard-image-border();
 }
+
+.failed-hide-ugc {
+  color: app-color-default($app-warn);
+}
