--- a/StewardClient/src/app/shared/views/ugc-table/ugc-table.component.html
+++ b/StewardClient/src/app/shared/views/ugc-table/ugc-table.component.html
@@ -11,6 +11,7 @@
       monitorDisable
       monitorWarn
       monitorWarnSnackbar
+      monitorCompleteSnackbar
     >
       <span [ngPlural]="selectedUgcs?.length">
         Hide {{ selectedUgcs?.length }}
