--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
@@ -166,7 +166,7 @@
                   <p>Cloned UGC is duplicated on the System user (ID 1 for FH5) in Studio.</p>
                   <p>
                     There are two other options available: KeepGuid and IsSearchable. These are not
-                    exposed here yet. Both are left off.
+                    exposed here yet. Both are enabled.
                   </p>
                   <p>
                     After the operation completes, the content will be visible on the Studio
