--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
@@ -159,7 +159,7 @@
                 monitorDisable
                 monitorWarn
                 monitorWarnSnackbar
-                monitorCompleteSnackbar
+                [monitorCompleteSnackbar]="cloneSnackbarComponent"
                 [disabled]="!canCloneUgc"
               >
                 <help-popover-icon cardTitle="Clone UGC">
@@ -172,6 +172,7 @@
                     After the operation completes, the content will be visible on the Studio
                     endpoints.
                   </p>
+                  <p>The snackbar that appears has options to copy the output text.</p>
                 </help-popover-icon>
                 Clone UGC
               </button>
