--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
@@ -172,7 +172,7 @@
                     After the operation completes, the content will be visible on the Studio
                     endpoints.
                   </p>
-                  <p>The snackbar that appears has options to copy the output text.</p>
+                  <p>The snackbar that appears has options to copy the ID and Share Code of the cloned item.</p>
                 </help-popover-icon>
                 Clone UGC
               </button>
