--- a/StewardClient/src/app/pages/tools/pages/ugc-details/components/clone-snackbar/clone-snackbar.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/components/clone-snackbar/clone-snackbar.component.html
@@ -18,7 +18,7 @@
 </button>
 <button
   mat-icon-button
-  [cdkCopyToClipboard]="completionValue.clonedFileId"
+  [cdkCopyToClipboard]="completionValue.clonedShareCode"
   matTooltip="Copy Share Code"
 >
   <mat-icon>vpn_key</mat-icon>
