--- a/StewardClient/src/app/pages/tools/pages/home/home.component.html
+++ b/StewardClient/src/app/pages/tools/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="sf-wrapper">
   <div class="sf-horizontal">
-    <mat-form-field class="tile-filter-chip-list" appearance="fill">
+    <mat-form-field class="tile-filter-chip-list sf-default-hint" appearance="fill">
       <mat-label>Filter Tiles</mat-label>
       <mat-chip-list #chipList aria-label="Filter selection">
         <mat-chip
@@ -22,8 +22,15 @@
           [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
           (matChipInputTokenEnd)="addFilter($event)"
         />
-
-        <button
+      </mat-chip-list>
+      <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selectedFilter($event)">
+        <mat-optgroup label="Title">
+          <mat-option *ngFor="let chip of titleFilterOptions | async" [value]="chip">
+            {{ chip.value | gameTitleAbbreviation: true }}
+          </mat-option>
+        </mat-optgroup>
+      </mat-autocomplete>
+      <button
           clickStop
           matSuffix
           mat-icon-button
@@ -33,14 +40,6 @@
         >
           <mat-icon>close</mat-icon>
         </button>
-      </mat-chip-list>
-      <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selectedFilter($event)">
-        <mat-optgroup label="Title">
-          <mat-option *ngFor="let chip of titleFilterOptions | async" [value]="chip">
-            {{ chip.value | gameTitleAbbreviation: true }}
-          </mat-option>
-        </mat-optgroup>
-      </mat-autocomplete>
     </mat-form-field>
     <button mat-raised-button (click)="clearTools()">Reset Selection</button>
   </div>
