--- a/StewardClient/src/app/pages/tools/pages/home/home.component.scss
+++ b/StewardClient/src/app/pages/tools/pages/home/home.component.scss
@@ -39,10 +39,7 @@
 
 mat-chip.filter-type-title.filter-type-title.filter-type-title {
   background-color: app-color-default($app-primary);
-}
-
-mat-chip.filter-type-text.filter-type-text.filter-type-text {
-  background-color: app-color-default($app-accent);
+  color: #fff !important;
 }
 
 :host {
