--- a/StewardClient/src/app/shared/views/player-ugc/sunrise/sunrise-player-ugc.component.html
+++ b/StewardClient/src/app/shared/views/player-ugc/sunrise/sunrise-player-ugc.component.html
@@ -4,7 +4,7 @@
   <sunrise-ugc-table
     [content]="filteredUgcContent"
     [contentType]="contentType"
-    (ugcsRemoved)="removeUgcs($event)"
+    (ugcItemsRemoved)="removeUgcs($event)"
   ></sunrise-ugc-table>
 </ng-container>
 
