--- a/StewardClient/src/app/shared/views/player-ugc/woodstock/woodstock-player-ugc.component.html
+++ b/StewardClient/src/app/shared/views/player-ugc/woodstock/woodstock-player-ugc.component.html
@@ -4,7 +4,7 @@
   <woodstock-ugc-table
     [content]="filteredUgcContent"
     [contentType]="contentType"
-    (ugcsRemoved)="removeUgcs($event)"
+    (ugcItemsRemoved)="removeUgcItems($event)"
   ></woodstock-ugc-table>
 </ng-container>
 
