--- a/StewardClient/src/app/shared/views/ugc-table/ugc-table.component.html
+++ b/StewardClient/src/app/shared/views/ugc-table/ugc-table.component.html
@@ -30,7 +30,7 @@
     </mat-checkbox>
     <div class="failed-hide-ugc" *ngIf="failedHideUgcs">
       <standard-copy [text]="failedHideUgcs" [alwaysShowIcon]="true">
-        Failed to hide some or all ugc(s)
+        Failed to hide some or all UGC items
       </standard-copy>
     </div>
   </div>
