--- a/StewardClient/src/app/shared/components/localization/create-localized-string/create-localized-string.component.html
+++ b/StewardClient/src/app/shared/components/localization/create-localized-string/create-localized-string.component.html
@@ -54,7 +54,7 @@
             [monitor]="postMonitor"
             monitorDisable
             monitorWarnSnackbar
-            [monitorCompleteSnackbar]="true"
+            monitorCompleteSnackbar
             [verifyWith]="verifySubmission"
           >
             Submit
